--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -16,7 +17,10 @@
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image": "^4.0.3",
+    "react-responsive-masonry": "^2.1.4",
     "react-scripts": "5.0.0",
+    "react-url-image-downloader": "^1.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
